hphp/test/slow/packages/requirepackage/parse_errors/parse_errors4.php.inc
<?hh

<<__SoftRequirePackage()>>
function dpe() : void {}
